# Caeron

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
cmake/: CompilerWarnings.cmake
docs/: architecture.md  phase1_teaching.md  phase2_teaching.md  phase3_teaching.md  phase4_teaching.md  phase5_teaching.md  phase6_teaching.md  roadmap.md
src/: CMakeLists.txt
src/caeron/: CMakeLists.txt
src/caeron/archive/: CMakeLists.txt
src/caeron/cluster/: CMakeLists.txt
src/caeron/cnc/: CMakeLists.txt  client_command_adapter.h  client_proxy.h  cnc_file_descriptor.cpp  cnc_file_descriptor.h  driver_events_adapter.h  driver_proxy.h  log_buffers.cpp  log_buffers.h  mapped_log_buffers_factory.cpp  mapped_log_buffers_factory.h
src/caeron/command/: CMakeLists.txt  client_timeout_flyweight.cpp  client_timeout_flyweight.h  control_protocol_events.h  correlated_message_flyweight.cpp  correlated_message_flyweight.h  counter_message_flyweight.cpp  counter_message_flyweight.h  counter_update_flyweight.cpp  counter_update_flyweight.h  destination_by_id_message_flyweight.h  destination_message_flyweight.h  error_response_flyweight.cpp  error_response_flyweight.h  get_next_available_session_id_message_flyweight.h  image_buffers_ready_flyweight.cpp  image_buffers_ready_flyweight.h  image_message_flyweight.cpp  image_message_flyweight.h  next_available_session_id_flyweight.h  operation_succeeded_flyweight.cpp  operation_succeeded_flyweight.h  publication_buffers_ready_flyweight.cpp  publication_buffers_ready_flyweight.h  publication_error_frame_flyweight.cpp  publication_error_frame_flyweight.h  publication_message_flyweight.cpp  publication_message_flyweight.h  reject_image_flyweight.h  remove_counter_flyweight.h  remove_message_flyweight.cpp  remove_message_flyweight.h  remove_publication_flyweight.cpp  remove_publication_flyweight.h  remove_subscription_flyweight.cpp  remove_subscription_flyweight.h  static_counter_flyweight.h  static_counter_message_flyweight.h  subscription_message_flyweight.cpp  subscription_message_flyweight.h  (+4 more)
src/caeron/common/: CMakeLists.txt  bit_util.h  byte_order.h  endian.h  errors.h  memory.h  types.h
src/caeron/concurrent/: CMakeLists.txt  atomic_buffer.h  atomic_counter.h  broadcast_receiver.h  broadcast_transmitter.h  cached_epoch_clock.h  cached_nano_clock.h  counters_manager.h  many_to_one_concurrent_linked_queue.h  many_to_one_ring_buffer.h  one_to_one_concurrent_array_queue.h  position.h  unsafe_buffer.cpp  unsafe_buffer.h
src/caeron/driver/: CMakeLists.txt  media_driver.cpp  media_driver.h
src/caeron/driver/buffer/: CMakeLists.txt
src/caeron/driver/congestion_control/: CMakeLists.txt
src/caeron/driver/flow_control/: CMakeLists.txt
src/caeron/driver/media/: CMakeLists.txt  channel_uri.h  control_mode.h  control_transport_poller.h  data_transport_poller.h  image_connection.h  interface_search_address.h  multi_rcv_destination.h  named_interface.h  network_util.h  port_manager.h  receive_channel_endpoint.h  receive_destination_transport.h  resolved_interface.h  send_channel_endpoint.h  socket_address_parser.h  udp_channel.h  udp_channel_transport.h  udp_transport_poller.h  unresolved_interface.h  wildcard_port_manager.h
src/caeron/driver/retransmit/: CMakeLists.txt
src/caeron/driver/status/: CMakeLists.txt
src/caeron/logbuffer/: CMakeLists.txt  buffer_claim.cpp  buffer_claim.h  frame_descriptor.h  header.h  header_writer.cpp  header_writer.h  log_buffer_descriptor.cpp  log_buffer_descriptor.h  log_buffer_unblocker.cpp  log_buffer_unblocker.h  term_block_scanner.cpp  term_block_scanner.h  term_gap_filler.cpp  term_gap_filler.h  term_gap_scanner.cpp  term_gap_scanner.h  term_reader.cpp  term_reader.h  term_rebuilder.cpp  term_rebuilder.h  term_scanner.cpp  term_scanner.h  term_unblocker.cpp  term_unblocker.h
src/caeron/protocol/: CMakeLists.txt  data_header_flyweight.cpp  data_header_flyweight.h  error_flyweight.cpp  error_flyweight.h  header_flyweight.cpp  header_flyweight.h  nak_flyweight.cpp  nak_flyweight.h  resolution_entry_flyweight.h  response_setup_flyweight.cpp  response_setup_flyweight.h  rtt_measurement_flyweight.cpp  rtt_measurement_flyweight.h  setup_flyweight.cpp  setup_flyweight.h  status_message_flyweight.cpp  status_message_flyweight.h
src/platform/posix/: CMakeLists.txt  clock.cpp  clock.h  epoll_poller.cpp  epoll_poller.h  mmap.cpp  mmap.h  thread.cpp  thread.h  udp_socket.cpp  udp_socket.h
tasks/: lessons.md  todo.md
tests/: CMakeLists.txt
tests/cnc/: CMakeLists.txt  cnc_test.cpp
tests/command/: CMakeLists.txt  command_flyweight_test.cpp
tests/common/: CMakeLists.txt  bit_util_test.cpp  byte_order_test.cpp  unsafe_buffer_test.cpp
tests/concurrent/: CMakeLists.txt  broadcast_test.cpp  counters_manager_test.cpp  mpsc_queue_test.cpp  ring_buffer_test.cpp  spsc_queue_test.cpp
tests/logbuffer/: CMakeLists.txt  buffer_claim_test.cpp  log_buffer_unblocker_test.cpp  term_block_scanner_test.cpp  term_gap_filler_test.cpp  term_gap_scanner_test.cpp  term_reader_test.cpp  term_rebuilder_test.cpp  term_scanner_test.cpp  term_unblocker_test.cpp
tests/media/: CMakeLists.txt  control_mode_test.cpp  control_transport_poller_test.cpp  data_transport_poller_test.cpp  image_connection_test.cpp  interface_search_address_test.cpp  named_interface_test.cpp  network_util_test.cpp  receive_channel_endpoint_test.cpp  send_channel_endpoint_test.cpp  socket_address_parser_test.cpp  udp_channel_test.cpp  udp_channel_transport_test.cpp  wildcard_port_manager_test.cpp
tests/platform/: CMakeLists.txt  clock_test.cpp  epoll_poller_test.cpp  mmap_test.cpp  thread_test.cpp  udp_socket_test.cpp
tests/protocol/: CMakeLists.txt  data_header_flyweight_test.cpp  error_flyweight_test.cpp  header_flyweight_test.cpp  nak_flyweight_test.cpp  resolution_entry_flyweight_test.cpp  response_setup_flyweight_test.cpp  rtt_measurement_flyweight_test.cpp  setup_flyweight_test.cpp  status_message_flyweight_test.cpp
