add_subdirectory(common)
add_subdirectory(protocol)
# add_subdirectory(command)    # populated after command flyweights are written
# add_subdirectory(concurrent) # populated after concurrent structures are written
# add_subdirectory(logbuffer)  # populated after logbuffer is written
# add_subdirectory(cnc)        # populated after cnc is written
# add_subdirectory(driver)     # populated after driver is written
# add_subdirectory(platform)   # populated after platform is written
