add_subdirectory(common)
add_subdirectory(protocol)
# add_subdirectory(command)    # populated after command flyweights are written
add_subdirectory(concurrent)
add_subdirectory(logbuffer)
# add_subdirectory(cnc)        # populated after cnc is written
# add_subdirectory(driver)     # populated after driver is written
add_subdirectory(platform)
